# FMCL

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md  README_en.md  about.json  build.rs  defaultsettings.json  requirements.txt
fmcllib/: __init__.py  address.py  application.py  filesystem.py  function.py  java.py  notify.py  safe_socket.py  setting.py  single_application.py  singleton.py  utils.py  window.py  wrapper.py
fmcllib/account/: __init__.py  yggdrasil_api.py
fmcllib/game/: __init__.py  fabric.py  instance.py  mod.py  modrinth_api.py  original.py
fmcllib/mirror/: __init__.py  action.py  base.py  common.py  filter.py  setting_card.py  widget.py  window.py
fmcllib/task/: __init__.py  common.py  download_task.py
functions/about/: __main__.py  about.py  about.ui  function.json  ui_about.py
functions/accountmanager/: __main__.py  account_manager.py  account_manager.ui  authlib_injector_adder.py  authlib_injector_adder.ui  authlib_injector_signiner.py  authlib_injector_signiner.ui  function.json  offline_adder.py  offline_adder.ui  profile_displayer.py  ui_account_manager.py  ui_authlib_injector_adder.py  ui_authlib_injector_signiner.py  ui_offline_adder.py
functions/addressmanager/: __main__.py  address_manager.py  address_manager.ui  function.json  ui_address_manager.py
functions/explorer/: __main__.py  defaultsettings.json  desktop.py  explorer.py  explorer.ui  explorer_ui.py  function.json  start.py  start.ui  (+4 more)
kernel/: main.c  main.cpp
lib/: CMakeLists.txt
resources/: __init__.py  build.py  resources.qrc  resources_rc.py
scripts/: apply_update.py  compress.py  generate_qm.py  generate_ts.py  generate_ui.py  make_icon.py  new_function.py  restart.py
src/: common.rs  error.rs  fcb.rs  main.rs  message.rs  service.rs  setting_item.rs  tcb.rs
translations/: en_US.qm  en_US.ts
(+209 files in other folders)
